Add Clamp Variable Generator to tools list

--- a/index.html
+++ b/index.html
@@ -154,6 +154,11 @@
                     <p class="tool-description">Brief description of what the tool does</p>
                 </li>
                 -->
+                <li>
+                    <a href="linear-clamp.html">Clamp Variable Generator</a>
+                    <p class="tool-description">Vary a value across a range of viewport widths</p>
+                </li>
+                
             </ul>
             
             <!-- This empty state is automatically hidden when class="has-tools" is added to the tools-list above -->
